# agpm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  agpm-lock.json  agpm.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude-plugin/: marketplace.json
cli/: AGENTS.md  package.json  pnpm-lock.yaml
cli/schemas/: agpm-lock.json  agpm.json
examples/collections-test/: agpm-lock.json  agpm.json  justfile
examples/simple/: agpm-lock.json  agpm.json  justfile
schemas/: skills-lock.json  skills.json
skills/agpm-usage/: SKILL.md
src/: config.rs  git.rs  main.rs  skill.rs
src/cli/: AGENTS.md  add.rs  install.rs  list.rs  mod.rs  remove.rs  update.rs
src/tui/: app.rs  mod.rs  ui.rs
website/: AGENTS.md  mdx-components.tsx  next.config.mjs  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/docs/: layout.tsx
website/app/docs/commands/: page.mdx
website/app/docs/commands/add/: page.mdx
website/app/docs/commands/install/: page.mdx
website/app/docs/commands/list/: page.mdx
website/app/docs/concepts/: page.mdx
website/app/docs/configuration/: page.mdx
website/app/docs/getting-started/: page.mdx
website/app/schemas/agpm-lock.json/: route.ts
website/app/schemas/agpm.json/: route.ts
website/components/docs/: code-block.tsx  shiki-code.tsx  sidebar.tsx  table.tsx
website/components/landing/: cta.tsx  features.tsx  hero.tsx  how-it-works.tsx  quick-start.tsx
website/components/layout/: footer.tsx  header.tsx  mobile-nav.tsx  theme-toggle.tsx
website/components/shared/: code-window.tsx
(+8 files in other folders)
