[package]
name = "skills"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Git
git2 = "0.19"

# JSON/YAML
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# File system
dirs = "5"
walkdir = "2"
tempfile = "3"

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP (for GitHub API)
reqwest = { version = "0.12", features = ["json"] }

# Misc
regex = "1"
